# ToolKit

./: .clang-format  .editorconfig  .gitignore  .gitmodules  APP.ipch  CMakeLists.txt  CPPLINT.cfg  DOXYGEN.cfg  LICENSE  License.txt  README.md  ToolKit.sln  VIEWPORT.ipch  cpydll.bat  lint.bat  update_license.py
BuildScripts/: Build.bat  UtilArtifacts.bat  WebBuildDebug.bat  WebBuildRelWithDebugInfo.bat  WebBuildRelease.bat  WebBuildReleaseWithDeb.bat  WinBuildDebug.bat  WinBuildRelWithDebugInfo.bat  WinBuildRelease.bat
CC/: count.bat  skip.txt  verbose.txt
Config/: Editor.settings  Engine.settings  UILayout.ini  Workspace.settings  defaultUI.ini  workspace.settings
Dependency/ImGui/: CMakeCache.txt  CMakeLists.txt  imconfig.h
Dependency/ImGui/backends/: imgui_impl_opengl3.cpp
Dependency/ImGui/lib/: imgui.lib
Dependency/tkimgui/: CMakeLists.txt  tk_imconfig.h
Dependency/zlib-1.2.12/contrib/minizip/: CMakeLists.txt
DependencyBuildScripts/: BuildAllDependencies.bat  BuildAssimp.bat  BuildImGui.bat  BuildMinizipNg.bat  BuildMinzipNg.bat  BuildSDL2.bat  BuildZLib.bat
Editor/: Action.cpp  Action.h  Anchor.cpp  Anchor.h  AnchorMod.cpp  AnchorMod.h  AndroidBuildWindow.cpp  AndroidBuildWindow.h  App.cpp  App.h  App.xaml  App.xaml.cs  CMakeLists.txt  ComponentView.cpp  ComponentView.h  ConsoleWindow.cpp  ConsoleWindow.h  CustomDataView.cpp  CustomDataView.h  DirectoryEntry.cpp  DirectoryEntry.h  DynamicMenu.cpp  DynamicMenu.h  Editor.csproj  Editor.rc  Editor.vcxproj  Editor.vcxproj.filters  EditorApi.cpp  EditorApi.h  EditorBillboard.cpp  EditorBillboard.h  EditorCamera.cpp  EditorCamera.h  EditorLight.cpp  EditorLight.h  EditorPass.cpp  EditorPass.h  EditorRenderer.cpp  EditorRenderer.h  EditorScene.cpp  (+106 more)
Editor/ImGui/: imconfig.h  imgui_impl_opengl3.cpp
Editor/NanoSvg/: nanosvg.h
Editor/Properties/: launchSettings.json
Import/: Import.vcxproj  Import.vcxproj.filters  assimp-vc142-mt.lib  assimp-vc143-mt.lib  import.cpp
Samples/SpaceShooter/: App.h  CMakeLists.txt  Explosion.h  Meteor.h  PowerUp.h  Projectile.h  Ship.h  SpaceShooter.vcxproj  SpaceShooter.vcxproj.filters  main.cpp
Source/: Actor.cpp  Actor.h  Animation.cpp  Animation.h  Audio.cpp  Audio.h  CMakeLists.txt  Component.cpp  Component.h  DebugNew.h  Directional.cpp  Directional.h  DllMain.cpp  DllMain.h  Drawable.cpp  Drawable.h  Entity.cpp  Entity.h  Events.h  GlobalCache.h  Logger.cpp  Logger.h  Material.cpp  Material.h  MathUtil.cpp  MathUtil.h  Mesh.cpp  Mesh.h  Node.cpp  Node.h  ParameterBlock.cpp  ParameterBlock.h  Plugin.h  PluginManager.cpp  PluginManager.h  Primative.cpp  Primative.h  RenderState.cpp  RenderState.h  Renderer.cpp  (+35 more)
Source/Common/: GlErrorReporter.h  TTFText.h
Template/: App.cpp  App.h  CMakeHotReload.cmake  CMakeLists.txt  Game.cpp  Game.h  Template.vcxproj  Template.vcxproj.filters  main.cpp
Template/Android/: gradlew.bat  settings.gradle.kts
Template/Android/app/: build.gradle  build.gradle.kts
Template/Android/app/jni/src/: CMakeLists.txt  android_main.cpp  android_main.h
Template/Android/app/src/main/: AndroidManifest.xml
Template/Android/app/src/main/assets/Resources/Engine/Materials/: missing.material
Template/Android/app/src/main/assets/Resources/Engine/Meshes/ShaderBall/: Cushion.mesh  GrayInlay.mesh  MaterialBase.mesh  MaterialBaseInside.mesh  MaterialSphere.mesh
Template/Android/app/src/main/assets/Resources/Engine/Scenes/: Sample.scene  ms-sphere.scene
Template/Android/app/src/main/assets/Resources/Engine/Shaders/: AO.shader  VSM.shader  avgBlurFrag.shader  avgBlurVert.shader  bloomUpsample.shader  defaultVertex.shader  deferredRenderFrag.shader  equirectToCubeVert.shader  gBufferFrag.shader  ibl.shader  lightComplexity.shader  lightDataTextureUtils.shader  lighting.shader  orthogonalDepthFrag.shader  orthogonalDepthVert.shader  orthogonalDepthViewVert.shader  pbr.shader  perspectiveDepthVert.shader  perspectiveDepthViewFrag.shader  preFilterEnvMapFrag.shader  shadow.shader  skyboxVert.shader  tonemapFrag.shader
Template/Android/app/src/main/cpp/: AndroidMain.cpp  AndroidMain.h  CMakeLists.txt  Game.cpp  Game.h  ToolKitMain.cpp  ToolKitMain.h  Utility.h  main.cpp
Template/Android/app/src/main/java/com/otyazilim/myapplication/: MainActivity.java
Template/Android/app/src/main/java/com/otyazilim/toolkit/: MainActivity.java  ToolKitAndroid.java
Template/Android/app/src/main/res/values/: strings.xml  themes.xml
Template/Android/app/src/main/res/values-night/: themes.xml
Template/Android/gradle/wrapper/: gradle-wrapper.properties
Template/Codes/: CMakeLists.txt  Game.cpp  Game.h  Main.cpp
Template/Config/: Engine.settings
Template/Config/Android/: Engine.settings
Template/Config/Web/: Engine.settings
Template/Web/: CMakeLists.txt  WebBuildDebug.bat  WebBuildRelWithDebugInfo.bat  WebBuildRelease.bat  web_main.cpp  web_main.h
Template/Windows/: WinBuildDebug.bat  WinBuildRelWithDebugInfo.bat  WinBuildRelease.bat  win_main.cpp  windows_main.h
Template/config/: Engine.settings
Templates/Game/Android/app/jni/: CMakeLists.txt
Templates/Game/Android/app/jni/src/: CMakeLists.txt  android_main.h
Templates/Game/Codes/: Build.bat  CMakeLists.txt  Game.cpp  Main.cpp
Templates/Plugin/Codes/: Build.bat  CMakeHotReload.cmake  CMakeLists.txt  PluginMain.cpp  PluginMain.h
ToolKit/: AABBOverrideComponent.cpp  AABBOverrideComponent.h  AABBTree.cpp  AABBTree.h  AdditiveLightingPass.cpp  AdditiveLightingPass.h  Animation.cpp  Animation.h  AnimationControllerComponent.cpp  AnimationControllerComponent.h  Audio.cpp  Audio.h  BVH.cpp  BVH.h  BillboardPass.cpp  BillboardPass.h  BinPack2D.cpp  BinPack2D.h  BloomPass.cpp  BloomPass.h  CMakeLists.txt  Camera.cpp  Camera.h  Canvas.cpp  Canvas.h  CanvasPanel.cpp  CanvasPanel.h  Class.h  Component.cpp  Component.h  CubemapPass.cpp  CubemapPass.h  DataTexture.cpp  DataTexture.h  DebugNew.h  DeferredPass.cpp  DeferredPass.h  DeferredSceneRenderPath.cpp  DeferredSceneRenderPath.h  DirectionComponent.cpp  (+186 more)
ToolKit/Common/: GlErrorReporter.h  SDLEventPool.h  TTFText.h  Win32Utils.h  base64.h
(+300 files in other folders)
